--- a/_config.yml
+++ b/_config.yml
@@ -94,15 +94,15 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : #"https://www.facebook.com/profile.php?id=100005727632784"
+  facebook         : "profile.php?id=100005727632784"
   foursquare       :
-  github           : "https://github.com/Frostbite7"
+  github           : "Frostbite7"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/yangyicge/"
+  instagram        : "yangyicge/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yi-yang-6679ab86/"
+  linkedin         : "yi-yang-6679ab86"
   orcid            : "https://orcid.org/0000-0002-4736-5491"
   pinterest        :
   soundcloud       :
