--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yi Yang"
-  avatar           : "profile.png"
+  avatar           : "avatar.png"
   bio              : "Computational modeling in earth and climate science"
   location         : "Urbana, IL"
   employer         :
