--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yi Yang's homepage"
 title_separator          : "-"
 name                     : "Yi Yang"
-description              : "personal description"
+description              : "Yi Yang's personal website"
 url                      : https://frostbite7.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Frostbite7/Frostbite7.github.io"
