--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Yi Yang's homepage"
+title                    : "Yi Yang's homepage7"
 title_separator          : "-"
 name                     : "Yi Yang7"
 description              : "Yi Yang's personal website"
