--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "yi-yang-6679ab86"
-  orcid            : "https://orcid.org/0000-0002-4736-5491"
+  orcid            : #"https://orcid.org/0000-0002-4736-5491"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
