--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Yi Yang's homepage"
 title_separator          : "-"
 name                     : "Yi Yang"
 description              : "Yi Yang's personal website"
-url                      : https://frostbite7.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yiyang7.site # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Frostbite7/Frostbite7.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
