--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yi Yang"
   avatar           : "avatar.jpg"
-  bio              : "Computational modeling in earth and climate science"
+  bio              : "Computational modeling for earth and climate science"
   location         : "Urbana, IL"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
